--- a/presentation/src/main/res/menu/menu_main.xml
+++ b/presentation/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@mipmap/ic_action_search"
+        android:title="Search"
+        app:showAsAction="collapseActionView|ifRoom"/>
 </menu>
