--- a/presentation/src/main/res/layout/fragment_main.xml
+++ b/presentation/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@color/colorPrimary"
+        app:tabMaxWidth="0dp"
+        app:tabGravity="fill"
         app:tabMode="scrollable"/>
 
     <android.support.v4.view.ViewPager
