--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -2,5 +2,19 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Paddings, margins etc.-->
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="standard_padding">8dp</dimen>
+
+    <!--Beatclip item-->
+    <dimen name="item_beatclip_height">160dp</dimen>
+    <dimen name="item_beatclip_thumb_play_button_size">50dp</dimen>
+    <dimen name="item_beatclip_footer_avatar_size">40dp</dimen>
+    <dimen name="item_beatclip_gradient_height">40dp</dimen>
+
+    <!--Footer load item-->
+    <dimen name="item_footer_load_height">60dp</dimen>
+
+
 </resources>
